<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:statusBarColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless">

        <ImageButton
            android:id="@+id/ibNavigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ib_navigation_margin_start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc_back_button"
            android:src="@drawable/ic_back"
            android:visibility="gone"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/toolbar_tv_title_margin_end"
            android:background="?android:statusBarColor"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/repositories"
            android:textAppearance="@style/toolBarTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ibLogOut"
            app:layout_constraintStart_toEndOf="@id/ibNavigation"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/ib_input_margin_end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc_ib_input"
            android:src="@drawable/ic_input"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.Toolbar>
